--- a/package.json
+++ b/package.json
@@ -22,17 +22,23 @@
   "homepage": "https://github.com/AGH-team-Red/backend#readme",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.7.0",
+    "bs58": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "eslint": "^9.25.1",
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
     "prettier": "3.5.3",
+    "prisma": "^6.7.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
