--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "tweetnacl": "^1.0.3",
-    "zod": "^3.24.3"
+    "zod": "3.21.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
@@ -43,6 +43,10 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.1"
+    "typescript-eslint": "^8.31.1",
+    "zod-prisma-types": "^3.2.4"
+  },
+  "overrides": {
+    "zod": "3.21.1"
   }
 }
