--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+    "strictNullChecks": true,
     "module": "commonjs",
     "target": "es2022",
     "esModuleInterop": true,
@@ -24,6 +25,9 @@
       ],
       "modules/*": [
         "./src/modules/*"
+      ],
+      "prisma/*": [
+        "./prisma/*"
       ]
     }
   }
